tests/compile-fail/generated/derives-span-Eq, PartialEq-tuple-struct.stderr
error[E0369]: binary operation `==` cannot be applied to type `&Error`
  --> $DIR/derives-span-Eq, PartialEq-tuple-struct.rs:15:5
   |
15 |     Error
   |     ^^^^^
   |
   = note: an implementation of `std::cmp::PartialEq` might be missing for `&Error`
